Updated id, class and content for currency output element i.e. "converted" and label for the target currency select element

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             <option value='ZMW' title='Zambian Kwacha'>Zambian Kwacha (ZWL)</option>
                             <option value='ZWL' title='Zimbabwean Dollar'>Zimbabwean Dollar (ZWL)</option>
                          </select>
-                         <label for="base-currencies">CONVERT TO</label>
+                         <label for="target-currencies">CONVERT TO</label>
                     </div>
                 </div>
                 <div class="input-container form-floating my-3">
@@ -378,7 +378,7 @@
                     <label for="amount">Amount</label>
                 </div>
                 <div class="converted-container">
-                    <p class="converted">1.56</p>
+                    <p class="converted" id="converted">0.00</p>
                 </div>
             </div>
         </div>
