Added a notice update frequency of the API rates, updated styling for API website attribution link and the notice

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="headline-content">
                 <p class="headline">Convert currencies anytime anywhere</p>
                 <a class="sub-headline" href="https://www.exchangerate-api.com">Rates By Exchange Rate API</a>
+                <p class="headline-notice">*Updated every 24 hours</p>
             </div>
             <div class="main-content">
                 <div class="currency-container">
