Updated headline text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="headline-container">
             <div class="headline-content">
-                <p class="headline">Convert currencies anytime anywhere</p>
+                <p class="headline">Convert currencies with ease anytime</p>
                 <a class="sub-headline" href="https://www.exchangerate-api.com">Rates By Exchange Rate API</a>
                 <p class="headline-notice">*Updated every 24 hours</p>
             </div>
