--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </div>
                 </div>
                 <div class="input-container form-floating my-3">
-                    <input type="text" class="form-control input-amount" id="amount" name="amount" placeholder="KES 1">
+                    <input type="number" class="form-control input-amount" id="amount" name="amount" placeholder="Amount" min="0">
                     <label for="amount">Amount</label>
                 </div>
                 <div class="converted-container">
