Updated link target

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="headline-container">
             <div class="headline-content">
                 <p class="headline">Convert currencies with ease anytime</p>
-                <a class="sub-headline" href="https://www.exchangerate-api.com">Rates By Exchange Rate API</a>
+                <a class="sub-headline" href="https://www.exchangerate-api.com" target="_blank">Rates By Exchange Rate API</a>
                 <p class="headline-notice">*Updated every 24 hours</p>
             </div>
             <div class="main-content">
